--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ffmpeg/core": "^0.9.0",
+    "@ffmpeg/ffmpeg": "^0.9.8",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "compressorjs": "^1.2.1",
     "create-redux-store": "^1.1.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
