--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "axios": "^1.6.0",
     "compressorjs": "^1.2.1",
     "create-redux-store": "^1.1.2",
+    "draft-js": "^0.11.7",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-location": "^3.3.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
